set up for sharedpreferrences and background changing

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -30,8 +30,8 @@
     <string name="animals">Animals</string>
     <string name="cities">Capitals</string>
     <string name="food">Food</string>
-
-
+    <string name="currLang">Current language: </string>
+    <string name="language">Language</string>
 
 
 </resources>
