--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="food">Potraviny</string>
     <string name="currLang">Jazyk: </string>
     <string name="language">Jazyk</string>
+    <string name="background">Výber pozadia</string>
 
 
 
