splashscreen added, back button

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -33,5 +33,5 @@
     <string name="currLang">Current language: </string>
     <string name="language">Language</string>
     <string name="background">Background choice</string>
-
+    <string name="welcome">Welcome</string>
 </resources>
