translation for repeat

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,4 +57,5 @@
     <string name="svk">Slovak words</string>
     <string name="en">English words</string>
     <string name="chooseWordLang">Words language</string>
+    <string name="playAgain">Play again</string>
 </resources>
